--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="header"> <!-- Nav header class-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,12 +23,12 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav
     </nav>
-    <div class="hero" alt="men and women of different ethnicities in a meeting"></div>
+    <div class="hero"</div>
     <section class="content"><!--added section class; div id brings to section on click -->
         <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="men and women of different ethnicities in a meeting">
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
